--- a/app/src/main/res/layout/tela_inicial.xml
+++ b/app/src/main/res/layout/tela_inicial.xml
@@ -66,9 +66,28 @@
                 android:id="@+id/grafico"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="64dp"
-                android:layout_marginEnd="64dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginEnd="32dp"
                 app:layout_constraintBottom_toTopOf="@+id/linhaQuadradoGrafico"
+                app:layout_constraintEnd_toEndOf="@+id/QuadradoGrafico"
+                app:layout_constraintStart_toStartOf="@+id/QuadradoGrafico"
+                app:layout_constraintTop_toBottomOf="@+id/periodo" />
+
+            <TextView
+                android:id="@+id/textNaoHaDadosGrafico"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:fontFamily="@font/montserrat_bold"
+                android:gravity="center"
+                android:text="Não há serviços adicionados para criar o grafico!"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="@+id/QuadradoGrafico"
                 app:layout_constraintEnd_toEndOf="@+id/QuadradoGrafico"
                 app:layout_constraintStart_toStartOf="@+id/QuadradoGrafico"
                 app:layout_constraintTop_toBottomOf="@+id/periodo" />
@@ -87,7 +106,7 @@
                 <ViewSwitcher
                     android:id="@+id/SwitcherDasInfosDoGrafico"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="250dp"
                     android:layout_gravity="center"
                     android:background="#FFFFFF"
                     android:visibility="gone"
@@ -107,8 +126,21 @@
                         <View
                             android:id="@+id/FundoTabela"
                             android:layout_width="wrap_content"
-                            android:layout_height="30dp"
+                            android:layout_height="1dp"
                             android:background="#B8B6B6"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/textView2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
+                            android:fontFamily="@font/montserrat_bold"
+                            android:text="Lista de Clientes"
+                            android:textColor="#000000"
+                            android:textSize="14sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -117,22 +149,37 @@
                             android:id="@+id/QuadradoListaDados"
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:scrollbars="vertical"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/FundoTabela" />
+                            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
                         <ImageButton
                             android:id="@+id/ButtonTrocarParaViewAnalise"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/button_ir_analise"
+                            android:background="@drawable/voltar_icon_new"
+                            android:rotation="180"
                             android:text="Analisar"
-                            app:layout_constraintBottom_toBottomOf="@+id/QuadradoListaDados"
-                            app:layout_constraintEnd_toEndOf="@+id/QuadradoListaDados"
-                            app:layout_constraintTop_toTopOf="@+id/QuadradoListaDados">
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent">
 
                         </ImageButton>
+
+                        <View
+                            android:id="@+id/fundoTabela"
+                            android:layout_width="wrap_content"
+                            android:layout_height="2dp"
+                            android:background="#B8B6B6"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -144,7 +191,7 @@
                         <View
                             android:id="@+id/fundoAnalise"
                             android:layout_width="wrap_content"
-                            android:layout_height="30dp"
+                            android:layout_height="1dp"
                             android:background="#B8B6B6"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -154,11 +201,11 @@
                             android:id="@+id/textAnaliseDados"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
                             android:text="Analise de Dados com Gemini"
                             android:textColor="#000000"
                             android:textSize="16sp"
                             android:textStyle="bold"
-                            app:layout_constraintBottom_toBottomOf="@+id/fundoAnalise"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="@+id/fundoAnalise" />
@@ -173,12 +220,19 @@
                             app:layout_constraintTop_toBottomOf="@+id/fundoAnalise" />
 
                         <ScrollView
+                            android:id="@+id/scrollViewGemini"
                             android:layout_width="0dp"
                             android:layout_height="0dp"
-                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:scrollbars="vertical"
+                            android:verticalScrollbarPosition="defaultPosition"
+                            app:layout_constraintBottom_toTopOf="@+id/buttonAnalisarGrafico"
                             app:layout_constraintEnd_toStartOf="@+id/buttonTrocarParaViewDados2"
                             app:layout_constraintStart_toEndOf="@+id/buttonTrocarParaViewDados"
-                            app:layout_constraintTop_toBottomOf="@+id/fundoAnalise">
+                            app:layout_constraintTop_toBottomOf="@+id/textAnaliseDados">
 
                             <TextView
                                 android:id="@+id/textRespostaIA"
@@ -189,11 +243,12 @@
                                 android:textSize="16sp" />
                         </ScrollView>
 
+
                         <ImageButton
                             android:id="@+id/buttonTrocarParaViewDados"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/button_voltar_lista"
+                            android:background="@drawable/voltar_icon_new"
                             android:text="Dados"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -207,7 +262,7 @@
                             android:id="@+id/buttonTrocarParaViewDados2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/button_voltar_lista"
+                            android:background="@drawable/voltar_icon_new"
                             android:text="Dados"
                             android:visibility="invisible"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -217,6 +272,26 @@
                             app:layout_constraintTop_toTopOf="parent">
 
                         </ImageButton>
+
+                        <View
+                            android:id="@+id/fundoTabela2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="2dp"
+                            android:background="#B8B6B6"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent" />
+
+                        <Button
+                            android:id="@+id/buttonAnalisarGrafico"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:background="@drawable/button_cancelar_acao"
+                            android:text="Analisar Grafico"
+                            app:layout_constraintBottom_toBottomOf="@+id/QuadradoAnalisarDados"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <!-- Layout para o menu analisar dados -->
@@ -240,11 +315,12 @@
                     android:adjustViewBounds="false"
                     android:background="#006F1F1F"
                     android:cropToPadding="false"
+                    android:rotation="-90"
                     app:layout_constraintBottom_toBottomOf="@+id/quadradoBaixoGrafico"
                     app:layout_constraintEnd_toEndOf="@+id/quadradoBaixoGrafico"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/quadradoBaixoGrafico"
-                    app:srcCompat="@drawable/seta_para_baixo" />
+                    app:srcCompat="@drawable/voltar_icon_new" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -341,6 +417,19 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/GrupoQuadradoBaixoGraficoServ" />
+
+            <Button
+                android:id="@+id/buttonFiltrar"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="Filtrar"
+                app:layout_constraintBottom_toTopOf="@+id/grafico"
+                app:layout_constraintEnd_toEndOf="@+id/QuadradoGrafico"
+                app:layout_constraintStart_toEndOf="@+id/periodo"
+                app:layout_constraintTop_toTopOf="@+id/QuadradoGrafico" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
