--- a/app/src/main/res/drawable/gradiente_fundo_loading.xml
+++ b/app/src/main/res/drawable/gradiente_fundo_loading.xml
@@ -1,12 +1,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-<item>
-    <!--<color android:color="#2196F3"/>-->
-    <shape android:shape="rectangle">
-        <gradient
-            android:startColor="#FFCC80"
-            android:endColor="#42A5F5"
-            android:angle="135"
-            />
-    </shape>
-</item>
+    <item>
+        <shape android:shape="rectangle">
+            <gradient
+                android:startColor="#FFCC80"
+                android:endColor="#42A5F5"
+                android:angle="135"/>
+        </shape>
+    </item>
 </layer-list>
