--- a/app/src/main/res/layout/bottom_sheet_detalhes_servico.xml
+++ b/app/src/main/res/layout/bottom_sheet_detalhes_servico.xml
@@ -125,6 +125,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/montserrat_regular"
+        android:gravity="center|left"
         android:textColor="#000000"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
