--- a/app/src/main/res/layout/item_lista_cliente.xml
+++ b/app/src/main/res/layout/item_lista_cliente.xml
@@ -35,7 +35,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:background="@drawable/pessoa_icon"
+                android:background="@drawable/pessoa_icon2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/paredeEntreNomeTelefone4"
                 app:layout_constraintStart_toStartOf="parent"
