--- a/app/src/main/res/layout/item_lista_servico.xml
+++ b/app/src/main/res/layout/item_lista_servico.xml
@@ -84,6 +84,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="@font/montserrat_bold"
+                android:gravity="center|left"
                 android:text="Reparo Celular"
                 android:textColor="#000000"
                 android:textSize="14sp"
@@ -102,6 +103,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="@font/montserrat_bold"
+                android:foregroundGravity="left|center"
                 android:text="João"
                 android:textColor="#000000"
                 android:textSize="14sp"
@@ -120,6 +122,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="@font/montserrat_regular"
+                android:gravity="center|left"
                 android:text="R$ 100,00"
                 android:textColor="#000000"
                 android:textSize="14sp"
@@ -139,6 +142,7 @@
                 android:layout_marginBottom="8dp"
                 android:drawableStart="@drawable/confirmar_icon"
                 android:fontFamily="@font/montserrat_regular"
+                android:gravity="center|left"
                 android:text="30/01/2024"
                 android:textColor="#000000"
                 android:textSize="14sp"
