--- a/app/src/main/res/layout/tela_gerenciamento_cliente.xml
+++ b/app/src/main/res/layout/tela_gerenciamento_cliente.xml
@@ -19,7 +19,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:layout_marginBottom="24dp"
         android:fontFamily="@font/montserrat_bold"
         android:text="Gerenciamento"
         android:textColor="#000000"
@@ -36,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:backgroundTint="#00FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/voltar_icon_new" />
