--- a/app/src/main/res/layout/tela_inicial.xml
+++ b/app/src/main/res/layout/tela_inicial.xml
@@ -66,8 +66,8 @@
                 android:id="@+id/grafico"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
                 app:layout_constraintBottom_toTopOf="@+id/linhaQuadradoGrafico"
                 app:layout_constraintEnd_toEndOf="@+id/QuadradoGrafico"
                 app:layout_constraintStart_toStartOf="@+id/QuadradoGrafico"
@@ -145,20 +145,6 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/QuadradoListaDados"
-                            android:layout_width="match_parent"
-                            android:layout_height="0dp"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginTop="8dp"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginBottom="8dp"
-                            android:scrollbars="vertical"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
                         <ImageButton
                             android:id="@+id/ButtonTrocarParaViewAnalise"
                             android:layout_width="wrap_content"
@@ -171,6 +157,32 @@
                             app:layout_constraintTop_toTopOf="parent">
 
                         </ImageButton>
+
+                        <ImageButton
+                            android:id="@+id/buttonTrocarParaViewAnalise22"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/voltar_icon_new"
+                            android:rotation="180"
+                            android:text="Analisar"
+                            android:visibility="invisible"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent">
+
+                        </ImageButton>
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/QuadradoListaDados"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:scrollbars="vertical"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toStartOf="@+id/ButtonTrocarParaViewAnalise"
+                            app:layout_constraintStart_toEndOf="@+id/buttonTrocarParaViewAnalise22"
+                            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
                         <View
                             android:id="@+id/fundoTabela"
@@ -202,6 +214,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
+                            android:fontFamily="@font/montserrat_bold"
                             android:text="Analise de Dados com Gemini"
                             android:textColor="#000000"
                             android:textSize="16sp"
@@ -238,6 +251,7 @@
                                 android:id="@+id/textRespostaIA"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:fontFamily="@font/montserrat_regular"
                                 android:justificationMode="inter_word"
                                 android:textColor="#000000"
                                 android:textSize="16sp" />
@@ -326,10 +340,13 @@
 
             <TextView
                 android:id="@+id/Recebimento"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginStart="64dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="64dp"
                 android:fontFamily="@font/montserrat_regular"
+                android:gravity="center"
                 android:text="Recebimento Total"
                 android:textColor="#000000"
                 android:textSize="14sp"
@@ -339,9 +356,10 @@
 
             <TextView
                 android:id="@+id/periodo"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_regular"
+                android:gravity="center"
                 android:text="Periodo: 01/04 até 01/05"
                 android:textColor="#000000"
                 android:textSize="14sp"
@@ -360,43 +378,37 @@
                 app:layout_constraintStart_toStartOf="@+id/QuadradoGrafico" />
 
 
-            <Button
-                android:id="@+id/buttonGerenciamentoClientes"
+            <TextView
+                android:id="@+id/textView4"
                 android:layout_width="0dp"
-                android:layout_height="120dp"
-                android:layout_marginStart="64dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="64dp"
-                android:background="@drawable/button_gerenciamento_clientes"
-                android:drawableTop="@drawable/clientes_icone"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:elevation="100dp"
                 android:fontFamily="@font/montserrat_bold"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:text="Gerenciamento de Clientes"
-                android:textSize="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/buttonGerenciamentoCategoria" />
+                android:gravity="center"
+                android:text="Gerenciamento de Categoria"
+                android:textColor="#0D0C0C"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/buttonGerenciamentoCategoria"
+                app:layout_constraintEnd_toEndOf="@+id/buttonGerenciamentoCategoria"
+                app:layout_constraintStart_toStartOf="@+id/buttonGerenciamentoCategoria" />
 
-            <Button
-                android:id="@+id/buttonGerenciamentoServico"
+            <ImageView
+                android:id="@+id/imageView2"
                 android:layout_width="0dp"
-                android:layout_height="120dp"
-                android:layout_marginStart="64dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="64dp"
-                android:background="@drawable/button_gerenciamento_servicos"
-                android:drawableTop="@drawable/servico_icone"
-                android:fontFamily="@font/montserrat_bold"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:text="Gerenciamento de Serviços"
-                android:textSize="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/buttonGerenciamentoClientes" />
+                android:layout_height="0dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:elevation="100dp"
+                app:layout_constraintBottom_toTopOf="@+id/textView4"
+                app:layout_constraintEnd_toEndOf="@+id/buttonGerenciamentoCategoria"
+                app:layout_constraintStart_toStartOf="@+id/buttonGerenciamentoCategoria"
+                app:layout_constraintTop_toTopOf="@+id/buttonGerenciamentoCategoria"
+                app:srcCompat="@drawable/categoria_icons" />
 
             <Button
                 android:id="@+id/buttonGerenciamentoCategoria"
@@ -407,28 +419,132 @@
                 android:layout_marginEnd="64dp"
                 android:background="@drawable/button_gerenciamento_servicos"
                 android:backgroundTint="#FFCDD2"
-                android:drawableTop="@drawable/servico_icone"
                 android:fontFamily="@font/montserrat_bold"
+                android:gravity="center"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:text="Gerenciamento de Categoria"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/GrupoQuadradoBaixoGraficoServ" />
 
-            <Button
-                android:id="@+id/buttonFiltrar"
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:elevation="100dp"
+                android:fontFamily="@font/montserrat_bold"
+                android:gravity="center"
+                android:text="Gerenciamento de Clientes"
+                android:textColor="#0D0C0C"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/buttonGerenciamentoClientes"
+                app:layout_constraintEnd_toEndOf="@+id/buttonGerenciamentoClientes"
+                app:layout_constraintStart_toStartOf="@+id/buttonGerenciamentoClientes" />
+
+            <ImageView
+                android:id="@+id/imageView3"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:elevation="100dp"
+                app:layout_constraintBottom_toTopOf="@+id/textView5"
+                app:layout_constraintEnd_toEndOf="@+id/buttonGerenciamentoClientes"
+                app:layout_constraintStart_toStartOf="@+id/buttonGerenciamentoClientes"
+                app:layout_constraintTop_toTopOf="@+id/buttonGerenciamentoClientes"
+                app:srcCompat="@drawable/pessoa_icon" />
+
+            <Button
+                android:id="@+id/buttonGerenciamentoClientes"
+                android:layout_width="0dp"
+                android:layout_height="120dp"
+                android:layout_marginStart="64dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="64dp"
+                android:background="@drawable/button_gerenciamento_clientes"
+                android:fontFamily="@font/montserrat_bold"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:textSize="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/buttonGerenciamentoCategoria" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:elevation="100dp"
+                android:fontFamily="@font/montserrat_bold"
+                android:gravity="center"
+                android:text="Gerenciamento de Serviços"
+                android:textColor="#0D0C0C"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/buttonGerenciamentoServico"
+                app:layout_constraintEnd_toEndOf="@+id/buttonGerenciamentoServico"
+                app:layout_constraintStart_toStartOf="@+id/buttonGerenciamentoServico" />
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:elevation="100dp"
+                app:layout_constraintBottom_toTopOf="@+id/textView6"
+                app:layout_constraintEnd_toEndOf="@+id/buttonGerenciamentoServico"
+                app:layout_constraintStart_toStartOf="@+id/buttonGerenciamentoServico"
+                app:layout_constraintTop_toTopOf="@+id/buttonGerenciamentoServico"
+                app:srcCompat="@drawable/servico_icone" />
+
+            <Button
+                android:id="@+id/buttonGerenciamentoServico"
+                android:layout_width="0dp"
+                android:layout_height="120dp"
+                android:layout_marginStart="64dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="64dp"
+                android:layout_marginBottom="32dp"
+                android:background="@drawable/button_gerenciamento_servicos"
+                android:fontFamily="@font/montserrat_bold"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:textSize="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/buttonGerenciamentoClientes"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <ImageButton
+                android:id="@+id/buttonFiltrar"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/filter_icon_circle"
+                android:backgroundTint="#FF42A5F5"
                 android:text="Filtrar"
                 app:layout_constraintBottom_toTopOf="@+id/grafico"
                 app:layout_constraintEnd_toEndOf="@+id/QuadradoGrafico"
-                app:layout_constraintStart_toEndOf="@+id/periodo"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/Recebimento"
                 app:layout_constraintTop_toTopOf="@+id/QuadradoGrafico" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
